--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
   },
   "homepage": "https://github.com/wix-private/eslint-config-wix#readme",
   "devDependencies": {
-    "eslint": "^2.9.0",
-    "wnpm-ci": "*"
+    "eslint": "~2.9.0",
+    "wnpm-ci": "latest"
   },
   "publishConfig": {
     "registry": "http://repo.dev.wix/artifactory/api/npm/npm-local/"
   },
   "dependencies": {
-    "eslint-config-xo": "*",
-    "eslint-config-xo-react": "*",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-react": "^5.0.1"
+    "eslint-config-xo": "~0.14.0",
+    "eslint-config-xo-react": "~0.7.0",
+    "eslint-plugin-babel": "~3.2.0",
+    "eslint-plugin-react": "~5.0.1"
   },
   "peerDependencies": {
     "eslint": ">=2.9.0"
