--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "eslint-plugin-react": "~5.0.1",
     "babel-eslint": "latest",
     "eslint-plugin-mocha": "~2.2.0",
-    "eslint-plugin-react-native-wix": "latest"
+    "eslint-plugin-react-native-wix": "^1.0.0"
   },
   "devDependencies": {
     "chai": "~3.5.0",
