--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "registry": "http://repo.dev.wix/artifactory/api/npm/npm-local/"
   },
   "dependencies": {
+    "babel-eslint": "^7.0.0",
     "eslint-config-xo": "^0.16.0",
     "eslint-config-xo-react": "^0.10.0",
-    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-babel": "^3.3.0",
     "eslint-plugin-mocha": "^4.0.0",
-    "eslint-plugin-react-native-wix": "^1.0.0",
-    "babel-eslint": "^7.0.0"
+    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-react-native-wix": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.0.0",
