--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-wix",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Shared eslint config for all Wix projects",
   "scripts": {
     "build": ":",
@@ -20,16 +20,12 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/wix-private/eslint-config-wix.git"
+    "url": "git+https://github.com/wix/eslint-config-wix.git"
   },
   "author": "Shahar Talmi",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wix-private/eslint-config-wix/issues"
-  },
-  "homepage": "https://github.com/wix-private/eslint-config-wix#readme",
+  "homepage": "https://github.com/wix/eslint-config-wix#readme",
   "publishConfig": {
-    "registry": "http://repo.dev.wix/artifactory/api/npm/npm-local/"
+    "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
     "babel-eslint": "^7.0.0",
