--- a/pom.xml
+++ b/pom.xml
@@ -29,5 +29,12 @@
                 <role>owner</role>
             </roles>
         </developer>
+         <developer>
+            <name>Shlomi Toussia-Cohen</name>
+            <email>shlomitc@wix.com</email>
+            <roles>
+                <role>owner</role>
+            </roles>
+        </developer>
     </developers>
 </project>
