--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "eslint-plugin-lodash": "^2.4.4",
     "eslint-plugin-mocha": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "eslint-plugin-react-native-wix": "^1.0.0"
+    "eslint-plugin-react-native-wix": "^1.0.0",
+    "eslint-plugin-wix-style-react": "^1.0.0"
   },
   "devDependencies": {
     "chai": "^3.0.0",
